Fixed some spacing issues & Added command usage table back to server.html

--- a/Plan/src/main/resources/web/css/main.css
+++ b/Plan/src/main/resources/web/css/main.css
@@ -82,7 +82,8 @@
 .main-limiter {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: visible;
     margin: 0;
     padding: 0;
 }
